# Minecraft-Clone-Own-GE

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  engine  main.cpp
include/glad/: glad.h
shadercode/: fragment.glsl  vertex.glsl
src/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  Player.cpp  Player.h  window.cpp
src/engine/: Camera.h  Collider.h  Frustum.h  GameObject.h  Geometry.h  Light.h  Mat4.h  Material.h  Mesh.h  OpenGL.h  Plane.h  Raycast.h  RenderList.h  Scene.h  Shader.h  Texture.h  Transform.h  Vector.h  window.h
src/source/: BoxCollider.cpp  Color.cpp  Frustum.cpp  GameObject.cpp  Geometry.cpp  Mat4.cpp  Mesh.cpp  OpenGL.cpp  PerspectiveCamera.cpp  Plane.cpp  Raycast.cpp  RenderList.cpp  Shader.cpp  Texture.cpp  Transform.cpp  Vec3.cpp  Vec4.cpp  glad.c
